--- a/medusajs-backend/package.json
+++ b/medusajs-backend/package.json
@@ -39,11 +39,13 @@
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "^4.17.2",
+    "medusa-extender": "^1.8.8",
     "medusa-file-cloudinary": "^1.0.2",
     "medusa-fulfillment-manual": "^1.1.40",
     "medusa-interfaces": "^1.3.9",
     "medusa-payment-manual": "^1.0.24",
     "medusa-payment-stripe": "^6.0.9",
+    "medusa-plugin-variant-images": "^1.0.5",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16"
   },
