--- a/medusajs-backend/package.json
+++ b/medusajs-backend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "medusa-starter-default",
+  "name": "Shacket Shack",
   "version": "0.0.1",
-  "description": "A starter for Medusa projects.",
-  "author": "Medusa (https://medusajs.com)",
+  "description": "Shacket Shack",
+  "author": "Reecenben (https://reecenben.com)",
   "license": "MIT",
   "keywords": [
     "sqlite",
@@ -45,7 +45,6 @@
     "medusa-interfaces": "^1.3.9",
     "medusa-payment-manual": "^1.0.24",
     "medusa-payment-stripe": "^6.0.9",
-    "medusa-plugin-variant-images": "^1.0.5",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16"
   },
